# consumidor-ai

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
docs/: temp_pdf_text.txt
docs/aulas/: Pós IA - IFG - 2025_02 - PLN - Engenharia de Prompt.ipynb  Pós IA - IFG - 2025_02 - PLN - RAG  RAG em Bancos de Dados Multimodais - Otávio Calaça Xavier
evaluation/: analise_baseline.md  evaluate.py  golden_set.json
src/: data_processing.py  ingestion.py  rag_pipeline.py
